# rfp

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  404.html  README.md  hello.sh  index.html  jax_img.html  kernel_prac.ipynb  mkdocs.yml  notes.md  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup_env.sh  sitemap.xml  two_cluster_example.ipynb
Generalizing Across Clusters/: index.html
Implementation/How to Train Your RFP/: index.html
Implementation/base/: index.html
Implementation/data/: index.html
Implementation/featuremap/: index.html
Implementation/gan/: index.html
Implementation/kernels/: index.html
Implementation/losses/: index.html
Implementation/networks/: index.html
Implementation/train/: index.html
Implementation/utils/: index.html
data/: index.html
deep_controls/: index.html
docs/: deep_controls.md  examples.md  generalizing_across_clusters.md  index.md  networks.md  rtc.md  thoughts.md  train.md  utils.md
docs/Implementation/: How to Train Your RFP.md  attention.md  base.md  data.md  feature_map.md  featuremap.md  gan.md  gp.md  kernels.md  losses.md  networks.md  train.md  utils.md
docs/generalizing_across_clusters/: overview.md  the_problem.md
examples/: dml.py  index.html  prac.py  reg_ode.py  stats.txt  vode.py
examples/data/: dml.npy  dml_False.npy  dml_False_True.npy  dml_True.npy  dml_linear_comp.npy  dml_standard_nn.npy  evict_arrays_False.npz  evict_arrays_True.npz  ff_False.npy  ff_loss_control_False.npy  ff_loss_treated_False.npy  inner_epochs_maml.npy  inner_epochs_regularized_maml.npy  inner_epochs_supervised_learning.npy  method_svl_prediction.npy  method_svl_reg.npy  ode1_est_effect_False.npy  ode1_est_effect_False_ff.npy  ode1_est_effect_True.npy  ode1_est_effect_True_ff.npy  ode1_eviction_rt_False.npy  ode1_eviction_rt_False_ff.npy  ode1_eviction_rt_True.npy  ode1_eviction_rt_True_ff.npy  ode1_loss_control.npy  ode1_loss_control_False_ff.npy  ode1_loss_control_True.npy  ode1_loss_control_True_ff.npy  ode1_loss_treated.npy  ode1_loss_treated_False_ff.npy  ode1_loss_treated_True.npy  ode1_loss_treated_True_ff.npy  ode1_mean_0.8.npy  ode1_multi_run_0.8.npy  ode1_multi_run_0.8_False.npy  ode1_multi_run_0.8_False_ff.npy  ode1_multi_run_0.8_True.npy  ode1_multi_run_0.8_True_ff.npy  ode1_std_0.8.npy
examples/notebooks/: dml_fair_compa.ipynb  limitations_of_ols.ipynb  motivation_flex.ipynb
examples/scripts/: 1.py  check_ode.py  (+25 more)
explanations/: index.html
generalizing_across_clusters/: index.html
getting-started/: README.md  setup.md  setup_env.sh
how-to-guides/: index.html
losses/: index.html
networks/: index.html
notebooks/: Basics_of_Dimensions.ipynb  How_Input_Normalization_Changes_Our_Understanding_of_Interpolation_vs_Extrapolation_With_Clusters.ipynb  Missing_Gradients.ipynb  Nearest_Neighbors_Example.ipynb  local_weighted_linear_regression_no_avg_effect_LM.ipynb  motivation_flex.ipynb  mv.py  pld.ipynb  prac.ipynb  tinygp.ipynb  two_cluster_example.ipynb
notebooks-scripts/: README.md
rfp/: Untitled-1.ipynb  __init__.py  base.py  compute.py  data.py  featureMap.py  feature_map.py  featuremap.py  losses.py  nn.py  prac.py  train.py  utils.py
rtc/: index.html
scripts/: devices.py  dml.py
tests/: test1.py  test_grads.py
thoughts/: index.html
toy-data/: gen_mse_data.ipynb  mse_data.csv
train/: index.html
tutorials/: index.html
utils/: index.html
(+68 files in other folders)
