[tool.poetry]
name = "rfp"
version = "0.1.0"
description = "\"Regularizing the Forward Pass\""
authors = ["Patrick Power <pharringtonp19@gmail.com>"]
license = "MIT"
homepage = "https://pharringtonp19.github.io/rfp/"
repository = "https://github.com/pharringtonp19/rfp"
documentation = "https://pharringtonp19.github.io/rfp/thoughts/"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
diffrax = "^0.2.1"
flax = "*"
tree-math = "^0.1.0"
distrax = "^0.1.2"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.4.1"
isort = "^5.10.1"
einops = "^0.4.1"
tinygp = "^0.2.3"
statsmodels = "^0.13.5"
jaxopt = "^0.5.5"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pre-commit = "^2.20.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
